# mongo_search_engine

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  database.c  database.h  encrypt.c  hello_mongoc  mongodatabase.c  mongodatabase.h  myclient.c  myclient.h  mysqldatabase.c  mysqldatabase.h  postings.c  search.c  searchengine  searchengine.c  searchengine.h  testmongodatabase.c  threadpool.c  threadpool.h  token.c  token.h  util.c  util.h  wikiload.c  wiser  wiser.c  wiser.h
